# eighty-eighty-six

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bins/: CMakeLists.txt
bins/ees-as/: CMakeLists.txt
bins/ees-as/src/: ees_as.c
bins/ees-dis/: CMakeLists.txt
bins/ees-dis/src/: ees-dis.c
bins/ees-emu/: CMakeLists.txt
bins/ees-emu/src/: ees-emu.c
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/include/base/: address.h  platform.h  print_format.h  reader.h  streams.h
libs/base/src/: reader.c  streams.c
libs/cpu/: CMakeLists.txt
libs/cpu/include/cpu/: bus.h  cpu.h  flags.h  ports.h
libs/cpu/src/: bus.c  cpu.c  instr_map.c  instr_map.h  ports.c
libs/debugger/: CMakeLists.txt
libs/debugger/include/debugger/: debugger.h
libs/debugger/src/: cp437.c  debugger.c  window_callbacks.c  window_callbacks.h
libs/decoder/: CMakeLists.txt
libs/decoder/include/decoder/: decoder.h  instruction.h  registers.h
libs/decoder/src/: decoder.c  decoder_context.c  decoder_context.h  decoder_funcs.c  decoder_funcs.h  instruction.c  mod_rm.c  mod_rm.h  op_code_table.c  op_code_table.h  registers.c
libs/decoder/tests/: decoder_tests.c  mod_rm_tests.c
libs/disassembler/: CMakeLists.txt
libs/disassembler/include/disassembler/: disassembler.h
libs/disassembler/src/: disassembler.c
libs/encoder/: CMakeLists.txt
libs/encoder/include/encoder/: encoder.h
libs/encoder/src/: encoder.c
libs/instructions/: CMakeLists.txt
libs/instructions/include/instructions/: instructions.h
libs/instructions/src/: instructions.c  registers.c
libs/testing/: CMakeLists.txt
libs/testing/include/testing/: testing.h
old/decoder/: decoder.c  decoder.h
src/: address.h  bus.c  bus.h  cpu.c  cpu.h  cpu_decoder.c  cpu_simple.c  decoder.c  decoder.h  decoder_tests.c  disassembler.c  disassembler.h  ees-dis.c  instruction.c  instruction.h  instructions.c  instructions.h  main.c  memory_reader.c  memory_reader.h  mod_rm.c  mod_rm.h  mod_rm_tests.c  op_code_table.c  platform.h  registers.c  registers.h  streams.c  streams.h  testing.c  testing.h  tests.c
src/decoder/: decoder.c  decoder.h  decoder_funcs.c  decoder_funcs.h  mod_reg_rm.h  mod_reg_rm_tests.c  mod_rm.h  op_code_table.c  op_code_table.h
tests/: small  small.asm  small.s  test.asm  xwing.com.c
